--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,7 @@ Tarih: ${new Date().toLocaleDateString(
             `.trim();
 
             // Mailto link oluştur
-            const mailtoLink = `mailto:info@akok.com.tr?subject=${encodeURIComponent(
+            const mailtoLink = `mailto:akoktr@gmail.com?subject=${encodeURIComponent(
               subject
             )}&body=${encodeURIComponent(emailBody)}`;
 
